# CloudHaskell-FileSize

./: README.md  cloudhaskell-filesize.cabal  run.sh  runworkers.sh  stack.yaml
app/: Main.hs
src/: Lib.hs  RepoWork.hs
